fix project spacing

--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -27,7 +27,7 @@
 .project {
         display: block;
         padding: 0 40px;
-        margin: 0 auto;
+        margin: 0 auto 80px auto;
 
         @media (min-width: 992px) {
         display: flex;
